--- a/WebDev/week1/Assignment (div)/index.html
+++ b/WebDev/week1/Assignment (div)/index.html
@@ -15,7 +15,19 @@
             <main class="content">
                 <h2>Create an account</h2>
                 <div class="card">
-                    <button class="google-btn">Sign up with Google</button>
+                    <button class="google-btn">
+                        <span class="google-icon">
+                            <svg width="18" height="18" viewBox="0 0 48 48">
+                                <path fill="#EA4335" d="M24 9.5c3.54 0 6.7 1.23 9.2 3.64l6.85-6.85C35.9 2.38 30.47 0 24 0 14.64 0 6.6 5.38 2.7 13.22l7.98 6.2C12.5 13.16 17.77 9.5 24 9.5z"/>
+                                <path fill="#4285F4" d="M46.1 24.5c0-1.56-.14-3.06-.4-4.5H24v8.52h12.4c-.54 2.9-2.2 5.36-4.7 7.04l7.26 5.63C43.3 37.36 46.1 31.48 46.1 24.5z"/>
+                                <path fill="#FBBC05" d="M10.68 28.42a14.5 14.5 0 0 1 0-8.84l-7.98-6.2a23.98 23.98 0 0 0 0 21.24l7.98-6.2z"/>
+                                <path fill="#34A853" d="M24 48c6.48 0 11.9-2.14 15.86-5.81l-7.26-5.63c-2.02 1.36-4.6 2.16-8.6 2.16-6.23 0-11.5-3.66-13.32-8.92l-7.98 6.2C6.6 42.62 14.64 48 24 48z"/>
+                            </svg>
+                        </span>
+
+                        Continue with Google
+                    </button>
+
                     <hr>    
                     <label for="email">Email</label>
                     <input id="email" type="text">
